@@ -10,6 +10,7 @@
 ##' @param pAdjustMethod one of "holm", "hochberg", "hommel", "bonferroni", "BH", "BY", "fdr", "none"
 ##' @param universe background genes
 ##' @param minGSSize minimal size of genes annotated by NCG category for testing
+##' @param maxGSSize maximal size of each geneSet for analyzing
 ##' @param qvalueCutoff qvalue cutoff
 ##' @param readable whether mapping gene ID to gene Name
 ##' @return A \code{enrichResult} instance
@@ -19,7 +20,8 @@ enrichNCG <- function(gene,
                       pvalueCutoff = 0.05,
                       pAdjustMethod = "BH",
                       universe,
-                      minGSSize = 5,
+                      minGSSize = 10,
+                      maxGSSize = 500,
                       qvalueCutoff = 0.2,
                       readable = FALSE){
     
@@ -29,6 +31,7 @@ enrichNCG <- function(gene,
                              pAdjustMethod = pAdjustMethod,
                              universe = universe,
                              minGSSize = minGSSize,
+                             maxGSSize = maxGSSize,
                              qvalueCutoff = qvalueCutoff,
                              USER_DATA = NCG_DOSE_Env)
 
