@@ -136,6 +136,7 @@ setMethod("plot", signature(x="gseaResult"),
 ##' @param exponent weight of each step
 ##' @param nPerm permutation numbers
 ##' @param minGSSize minimal size of each geneSet for analyzing
+##' @param maxGSSize maximal size of each geneSet for analyzing
 ##' @param pvalueCutoff pvalue Cutoff
 ##' @param pAdjustMethod p value adjustment method
 ##' @param verbose print message or not
@@ -148,6 +149,7 @@ gseDO <- function(geneList,
                   exponent=1,
                   nPerm=1000,
                   minGSSize = 10,
+                  maxGSSize = 500,
                   pvalueCutoff=0.05,
                   pAdjustMethod="BH",
                   verbose=TRUE,
@@ -157,6 +159,7 @@ gseDO <- function(geneList,
                          exponent          = exponent,
                          nPerm             = nPerm,
                          minGSSize         = minGSSize,
+                         maxGSSize         = maxGSSize,
                          pvalueCutoff      = pvalueCutoff,
                          pAdjustMethod     = pAdjustMethod,
                          verbose           = verbose,
@@ -185,6 +188,7 @@ gseNCG <- function(geneList,
                   exponent=1,
                   nPerm=1000,
                   minGSSize = 10,
+                  maxGSSize = 500,
                   pvalueCutoff=0.05,
                   pAdjustMethod="BH",
                   verbose=TRUE,
@@ -194,6 +198,7 @@ gseNCG <- function(geneList,
                          exponent          = exponent,
                          nPerm             = nPerm,
                          minGSSize         = minGSSize,
+                         maxGSSize         = 500,
                          pvalueCutoff      = pvalueCutoff,
                          pAdjustMethod     = pAdjustMethod,
                          verbose           = verbose,
